--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "numpy>=1.19.0",
     "langchain-core>=0.1.0",
     "langchain-community>=0.0.10",
-    "langchain-openai>=0.0.2",
+    "langchain-ollama>=0.1.0",
     "langchain-anthropic>=0.0.2",
     "langgraph>=0.0.10",
     "python-dotenv>=0.19.0",
@@ -43,7 +43,7 @@ dependencies = [
     "einops-exts>=0.0.4",
     "timm>=0.5.0",
     "tiktoken>=0.3.0",
-    "openai>=0.27.0",
+    "ollama>=0.1.0",
     "backoff>=1.10.0",
     "torch>=2.2.0",
     "torchvision>=0.10.0",
