--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ dependencies = [
     "httpx>=0.23.0",
     "uvicorn>=0.15.0",
     "fastapi>=0.68.0",
+    "python-multipart>=0.0.6",
+    "motor>=3.3.2",
+    "pymongo>=4.6.0",
     "einops>=0.3.0",
     "einops-exts>=0.0.4",
     "timm>=0.5.0",
